# c2t-extension

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
mappings/: mapping_host.yarrrrml.yaml
ontology/: ontology.ttl
src/: CLI.py  inspect_parser.py  logic.py  queries.py  syft_parser.py  unifier.py
