[tool.poetry]
name = "c2t"
version = "1.0.0"
description = "C2T: Containers to Triples - Extension."
authors = ["Andrei Iulian Grozescu"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1"
rdflib = "^7.0"
morph-kgc = "^2.6"
pandas = "^2.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
c2t = "src.CLI:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"